fix z-index for tail button and main margin-right when sidebar collapsed

--- a/assets/stylesheets/layout.sass
+++ b/assets/stylesheets/layout.sass
@@ -29,6 +29,7 @@ body > div
 
 #right
   position: absolute
+  z-index: 100
   top: 40px
   right: 0
   width: 205px
