--- a/assets/stylesheets/right/slider.sass
+++ b/assets/stylesheets/right/slider.sass
@@ -24,8 +24,8 @@
     background: $color-border-slider-hover
 
 .maximized
-  // #main
-  //   padding-right: 40px
+  #main
+    margin-right: 55px
 
   #right
     width: 0
